Avoid Cumulative Layout Shift

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -24,8 +24,8 @@
 }
 
 .footer .social-nav img, .footer .social-nav svg {
-    height: 1.6rem;
-    width: 1.6rem;
+    height: 26px;
+    width: 26px;
 }
 
 /* Copyright Notice */
